; ModuleID = '/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_domain.c_tb_domain_approve_xdomain_paths.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_domain.c_tb_domain_approve_xdomain_paths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tb = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }
%struct.tb_xdomain = type { i32 }

@ENOTSUPP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tb_domain_approve_xdomain_paths(%struct.tb* %0, %struct.tb_xdomain* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tb*, align 8
  %5 = alloca %struct.tb_xdomain*, align 8
  store %struct.tb* %0, %struct.tb** %4, align 8
  store %struct.tb_xdomain* %1, %struct.tb_xdomain** %5, align 8
  %6 = load %struct.tb*, %struct.tb** %4, align 8
  %7 = getelementptr inbounds %struct.tb, %struct.tb* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = bitcast {}** %9 to i32 (%struct.tb*, %struct.tb_xdomain*)**
  %11 = load i32 (%struct.tb*, %struct.tb_xdomain*)*, i32 (%struct.tb*, %struct.tb_xdomain*)** %10, align 8
  %12 = icmp ne i32 (%struct.tb*, %struct.tb_xdomain*)* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOTSUPP, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %3, align 4
  br label %26

16:                                               ; preds = %2
  %17 = load %struct.tb*, %struct.tb** %4, align 8
  %18 = getelementptr inbounds %struct.tb, %struct.tb* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = bitcast {}** %20 to i32 (%struct.tb*, %struct.tb_xdomain*)**
  %22 = load i32 (%struct.tb*, %struct.tb_xdomain*)*, i32 (%struct.tb*, %struct.tb_xdomain*)** %21, align 8
  %23 = load %struct.tb*, %struct.tb** %4, align 8
  %24 = load %struct.tb_xdomain*, %struct.tb_xdomain** %5, align 8
  %25 = call i32 %22(%struct.tb* %23, %struct.tb_xdomain* %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %16, %13
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
